infra/federation/matrix-c/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: federation-c
  namespace: gateway
spec:
  gatewayClassName: traefik
  listeners:
    - name: https-wellknown-c
      protocol: HTTPS
      port: 443
      hostname: ${federation_denied_server_name}
      tls:
        mode: Terminate
        certificateRefs:
          - name: matrix-c-tls
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: matrix-c
    - name: https-matrix-c
      protocol: HTTPS
      port: 443
      hostname: matrix.${federation_denied_server_name}
      tls:
        mode: Terminate
        certificateRefs:
          - name: matrix-c-tls
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: matrix-c
